# bvlos-sim

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE.md  README.md  SECURITY.md  conftest.py  main.py  mkdocs.yml  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  release.yml
adapters/: __init__.py  ardupilot_sitl.py  ardupilot_sitl_mavlink.py  ardupilot_sitl_mission.py  ardupilot_sitl_types.py  ardupilot_sitl_upload.py  atomic_write.py  batch_io.py  batch_support.py  battery_sizer.py  battery_sizing_envelope.py  calibration_markdown.py  canonical_json.py  checklist_markdown.py  cli.py  cli_batch_support.py  cli_contract.py  cli_sitl_support.py  cli_support.py  envelope.py  geofence_geojson.py  geojson.py  geojson_export.py  ground_risk_markdown.py  io.py  kml_export.py  landing_zone_geojson.py  markdown.py  operational_readiness.py  population_grid.py  preflight.py  preflight_envelope.py  profile_markdown.py  progress.py  qgc_export.py  qgc_plan.py  release.py  route_export_support.py  scenario_envelope.py  scenario_io.py  (+26 more)
adapters/assets/: __init__.py  geofence_geojson.py  geojson.py  landing_zone_geojson.py  obstacle_geojson.py  population_grid.py  terrain_grid.py  wind_grid.py
adapters/calibration/: __init__.py  apply.py  fitter.py  io.py
adapters/commands/: batch.py  bump.py  calibrate.py  compare.py  convert.py  estimate.py  export.py  ingest_log.py  migrate.py  propagate.py  sample.py  scenario.py  schema_versions.py  sitl.py  size_battery.py  sora.py  validate.py  verify_evidence.py
adapters/flight_log/: __init__.py  dataflash.py  dataflash_binary.py  dispatch.py  io.py  ulog.py
adapters/migration/: mission.py
adapters/phase_segmentation/: __init__.py  io.py  segmenter.py
adapters/sitl/: ardupilot.py  ardupilot_mavlink.py  ardupilot_mission.py  ardupilot_types.py  ardupilot_upload.py  artifacts.py  comparison.py  comparison_artifacts.py  comparison_dimensions.py  comparison_expected.py  comparison_markdown.py  comparison_position.py  comparison_telemetry.py  evidence.py  evidence_io.py  evidence_markdown.py
adapters/validation/: __init__.py  io.py  validator.py
bvlos_sim/: __init__.py  __main__.py
bvlos_sim.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
bvlos_sim/adapters/: __init__.py  atomic_write.py  batch_io.py  batch_support.py  battery_sizer.py  battery_sizing_envelope.py  calibration_markdown.py  canonical_json.py  checklist_markdown.py  cli.py  cli_batch_support.py  cli_contract.py  cli_sitl_support.py  cli_support.py  (+35 more)
data/: README.md
docs/: BVLOS_MISSION_SIMULATOR_BRIEF.md  CLI_EXIT_CODES.md  CODE_STYLE.md  ESTIMATOR_V1_FIELD_SEMANTICS.md  GRAPHIFY.md  ROADMAP.md  SITL_ADAPTER_CONTRACT.md  SITL_LOCAL_SETUP.md  USAGE.md  VERSIONING_POLICY.md  cli.md  design.md  getting-started.md  index.md  missions.md  roadmap.md  sitl.md
estimator/: __init__.py
graphify-out/: .gitignore  GRAPH_REPORT.md  cost.json  manifest.json
schemas/: __init__.py  batch.py  calibration.py  flight_log.py  mission.py  phase_segment.py  preflight_validation.py  resource_link.py  scenario.py  sitl.py  sitl_comparison.py  sora.py  stochastic.py  uncertainty.py  validation.py  vehicle.py  vehicle_capabilities.py  vehicle_controller.py  vehicle_energy.py  vehicle_mass.py  vehicle_performance.py  vehicle_sensors.py  vehicle_sitl.py
scripts/: _overpass.py  build_population_grid.py  cli_batch_audit.py  fetch_all.py  fetch_geofences.py  fetch_landing_zones.py  fetch_obstacles.py  fetch_population.py  fetch_terrain.py  fetch_wind.py
sitl/: Containerfile  launch.sh
tests/: helpers.py  test_air_risk.py  test_ardupilot_sitl.py  test_atomic_write.py  test_batch.py  test_battery_sizer.py  test_binary_flight_log_ingestion.py  test_build_population_grid.py  test_bump_version.py  test_calibration.py  test_checklist_markdown.py  test_cli.py  test_containment.py  test_contract_golden.py  test_divert_routing.py  test_docs_examples.py  test_dubins.py  test_dynamic_landing_zone.py  test_engine_warnings.py  test_environment_grid_safety.py  test_estimator_determinism.py  test_estimator_energy.py  test_estimator_errors.py  test_estimator_fidelity_v2.py  test_estimator_loiter.py  test_estimator_result_shape.py  test_estimator_subsegment.py  test_estimator_transit.py  test_exit_codes_contract.py  test_fetch_scripts.py  test_flight_log_ingestion.py  test_geofence.py  test_geojson_export.py  test_go_reference_mission.py  test_ground_risk.py  test_import_graph.py  test_landing_zone.py  test_markdown_report.py  test_migrations.py  test_monte_carlo.py  (+44 more)
(+425 files in other folders)
