[project]
name = "bvlos-sim"
version = "0.33.0"
description = "Open-source BVLOS mission validation and simulation tooling."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "bvlos-sim contributors" },
]
license = "MIT"
keywords = [
    "bvlos",
    "drone",
    "geofence",
    "mission-planning",
    "simulation",
    "uav",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pydantic>=2.13.4",
    "pyproj>=3.7.2",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
    "shapely>=2.1.2",
    "typer>=0.25.1",
]

[project.urls]
Homepage = "https://github.com/Monotox/bvlos-sim"
Repository = "https://github.com/Monotox/bvlos-sim"
Documentation = "https://github.com/Monotox/bvlos-sim/tree/main/docs"

[project.scripts]
bvlos-sim = "bvlos_sim.__main__:main"
bvlos-fetch-all = "bvlos_sim.scripts.fetch_all:main"
bvlos-fetch-geofences = "bvlos_sim.scripts.fetch_geofences:main"
bvlos-fetch-landing-zones = "bvlos_sim.scripts.fetch_landing_zones:main"
bvlos-fetch-obstacles = "bvlos_sim.scripts.fetch_obstacles:main"
bvlos-fetch-population = "bvlos_sim.scripts.fetch_population:main"
bvlos-build-population-grid = "bvlos_sim.scripts.build_population_grid:main"
bvlos-fetch-terrain = "bvlos_sim.scripts.fetch_terrain:main"
bvlos-fetch-wind = "bvlos_sim.scripts.fetch_wind:main"

[build-system]
requires = ["setuptools>=83.0.0"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
scripts = [
    "requests>=2.32.0",
    "srtm.py>=0.3.4",
]
flight-logs = [
    "pymavlink==2.4.49",
    "pyulog>=1.2.2",
]
sitl = [
    "pymavlink==2.4.49",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.16.0",
]
sitl = [
    "pymavlink==2.4.49",
]
docs = [
    "mkdocs-material>=9.7.7",
]

[tool.setuptools.packages.find]
include = ["bvlos_sim*"]

[tool.ruff]
include = ["bvlos_sim/**/*.py", "tests/**/*.py"]

[tool.ruff.lint]
# Pinned rather than inherited. Ruff's default selection widens between
# releases, so leaving it implicit means a routine version bump silently
# changes what "lint passes" means: 0.16.0 added ten rule families and 354
# findings to an unchanged tree, including B008 against the typer.Option
# defaults the CLI is required to use. Adopting a new family is a deliberate
# edit here, not a side effect of a dependency update.
select = ["E4", "E7", "E9", "F"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "live_sitl: tests that require a running ArduPilot SITL container",
]
